test/success/unit/_succ_value_basic_2.hs
x :: Double
x = 3.0
main = print "hello"