test/fail/integration/_fail_grammar_do_block.hs
main = do
       print "hello"
         print "hello"